--- a/.github/workflows/publish-marketplace-vsix.yml
+++ b/.github/workflows/publish-marketplace-vsix.yml
@@ -115,8 +115,8 @@ jobs:
                 version = $version
                 internalName = $extensionId 
             }
-            # ¡Añadido 'categories' como un array de strings!
-            categories = @("Build and Deployment", "Templates", "Coding") # Puedes ajustar estas categorías
+            # ¡Categorías ajustadas a las más comunes y seguras para el Marketplace!
+            categories = @("Tools", "Coding", "Templates") 
         } | ConvertTo-Json -Depth 10 # Convertir a JSON
 
         # 5. Guardar el manifiesto JSON en un archivo temporal
