--- a/.github/workflows/publish-marketplace-vsix.yml
+++ b/.github/workflows/publish-marketplace-vsix.yml
@@ -79,7 +79,7 @@ jobs:
         name: vsix-package
         path: ${{ steps.find_vsix.outputs.vsix_file }}
 
-    - name: Publish VSIX to Visual Studio Marketplace (using VsixPublisher.exe) # <-- ¡Paso modificado!
+    - name: Publish VSIX to Visual Studio Marketplace (using VsixPublisher.exe)
       run: |
         # Intentamos localizar VsixPublisher.exe.
         $vsixPublisherPath = Get-ChildItem -Path C:\Users\runneradmin\.nuget\packages\Microsoft.VSSDK.BuildTools\* -Filter VsixPublisher.exe -Recurse -ErrorAction SilentlyContinue | Select-Object -ExpandProperty FullName -First 1
@@ -116,7 +116,7 @@ jobs:
                 internalName = $extensionId 
             }
             # ¡Categorías ajustadas a las más comunes y seguras para el Marketplace!
-            categories = @("Tools", "Coding", "Templates") 
+            categories = @("Productivity", "Languages") # Cambiando categorías
         } | ConvertTo-Json -Depth 10 # Convertir a JSON
 
         # 5. Guardar el manifiesto JSON en un archivo temporal
